--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 }
 .fa-quote-left {
   font-size: 4rem;
+  color: #8e44ad;
 }
 .quote-author {
   margin-top: 15px;
@@ -52,7 +53,7 @@ button {
   border: none;
   border-radius: 10px;
   color: #fff;
-  background-color: #333;
+  background-color: #8e44ad;
   outline: none;
   padding: 0.5rem 1.8rem;
   box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
@@ -70,6 +71,25 @@ button:active {
 .fa-twitter {
   font-size: 1.5rem;
 }
+/* Loader */
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #333; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* Media Query */
 @media screen and (max-width: 1000px) {
   .quote-container {
